# Avorax

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PLANS.md  README.md  RUN_LOG.md  SECURITY_MODEL.md  STATUS.md  TESTING.md  TODO.md  agent.md
core/pasus_local_core/: Cargo.toml
core/pasus_local_core/src/: main.rs
core/pasus_local_core/src/ai/: model_runner.rs
core/pasus_local_core/src/app_control/: known_bad_store.rs  known_good_store.rs  policy.rs  publisher_trust.rs  trust_store.rs
core/pasus_local_core/src/quarantine/: quarantine_store.rs
core/pasus_local_core/src/scanner/: clamav_provider.rs  file_walker.rs  yara_provider.rs
core/zentor_local_core/: Cargo.toml  README.md
core/zentor_local_core/src/: core_service_ipc.rs  main.rs  migration.rs  windows_tools.rs
core/zentor_local_core/src/ai/: feature_extractor.rs  model_metadata.rs  model_runner.rs  onnx_runtime.rs  training_labels.rs
core/zentor_local_core/src/allowlist/: allowlist_store.rs
core/zentor_local_core/src/api/: mod.rs
core/zentor_local_core/src/app_control/: known_bad_store.rs  known_good_store.rs  mod.rs  policy.rs  publisher_trust.rs  script_policy.rs  store_io.rs  trust_store.rs  user_approval.rs
core/zentor_local_core/src/protection/: behavior_monitor.rs  execution_blocker.rs  file_monitor.rs  guard_service.rs  process_monitor.rs  ransomware_guard.rs  recovery_manager.rs
core/zentor_local_core/src/quarantine/: quarantine_store.rs
core/zentor_local_core/src/ransomware/: mod.rs
core/zentor_local_core/src/scanner/: clamav_provider.rs  (+10 more)
(+634 files in other folders)
