[package]
name = "pasus_local_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
compat_clamav = []
compat_yara = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
pasus_native_engine = { path = "../pasus_native_engine" }
tract-onnx = "0.21"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
