[package]
name = "zentor_local_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
compat_clamav = []
compat_yara = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zentor_native_engine = { path = "../zentor_native_engine" }
tract-onnx = "0.21"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }

[dev-dependencies]
flate2 = "1.1"
tempfile = "3.14"
